# zero-switch

./: LICENSE  README.md  initial_setup.sh  pyproject.toml
scripts/: initial_setup.sh  org.jasonaa.hidbluetooth.conf  run.sh
zero-switch/: manifest.json
zero_switch/: keyboard.py  main.py  org.jasonaa.hidbluetooth.introspection
zero_switch/keyboard/: keyboard_client.py
zero_switch/mouse/: mouse_client.py
