[tool.poetry]
name = "zero-switch"
version = "0.1.0"
description = ""
authors = ["Jason Antwi-Appah <hey@jasonaa.me>"]
license = "MIT"
readme = "README.md"
packages = [{include = "zero_switch"}]

[tool.poetry.dependencies]
python = "^3.11"
evdev = "^1.6.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
